--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Trust</string>
 
     <string name="login">登录</string>
+    <string name="login_progress">正在登录···</string>
     <string name="login_no_account">没有账号？请点击注册</string>
     <string name="register">注册</string>
     <string name="register_have_account">已有账号？请点击登录</string>
